# eight-puzzle-rs

./: Cargo.toml  README.md  azure-pipelines.yml  generate_mac_os_app.sh
ci-script/: build_publish_unix.yml  build_publish_windows.yml
eight-puzzle/: Cargo.toml
eight-puzzle-core/: Cargo.toml
eight-puzzle-core/src/: direction.rs  hint.rs  lib.rs  state.rs
eight-puzzle-core/src/tests/: mod.rs  test_hash_state.rs
eight-puzzle/src/: lib.rs  main.rs
mac_os_app_template/Contents/: Info.plist
mac_os_app_template/Contents/Resources/: icon.icns
release-notes/1.0/: README.md
release-notes/1.1/: README.md
