[package]
name = "eight-puzzle"
version = "1.1.0"
authors = ["Jason Lee <jason5lee@hotmail.com>"]
edition = "2018"

[[bin]]
name = "eight-puzzle"
path = "src/main.rs"

[dependencies]
piston_window = "0.98.0"
find_folder = "0.3"
log = "0.4"
env_logger = "0.6"
eight-puzzle-core = { path = "../eight-puzzle-core" }